# gapic-generator-php

./: .bazeliskrc  .bazelrc  .gitignore  .gitmodules  .php_cs.cache  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  README.md  WORKSPACE.bazel  build_proto.sh  cloudbuild-test.yaml  composer.json  phpstan.neon.dist  phpunit.xml.dist  plugin.proto  pr_url.txt  renovate.json  repositories.bzl
bazel_example/: .bazeliskrc  BUILD.bazel  WORKSPACE.bazel  example-gapic.yaml  example-grpc-service-config.json  example-service.yaml  example.proto
integration_tests/: BUILD.bazel  Invoker.php  Main.php  SourceComparer.php  run_protoc_plugin.sh
integration_tests/goldens/asset/: .BUILD.bazel.swp
integration_tests/goldens/asset/src/V1/resources/: asset_service_client_config.json
rules_php_gapic/: BUILD.bazel  php.bzl  php_gapic.bzl  php_gapic_pkg.bzl  php_repo.bzl
rules_php_gapic/private/: utils.bzl
rules_php_gapic/resources/: prebuild.sh  readme.md  update_prebuilt_php.sh
tests/Integration/: BUILD.bazel  Invoker.php  Main.php  compliance.proto
tests/Integration/apis/compute_small/v1/: compute_small.proto
tests/Integration/apis/kms/v1/: cloudkms_test_mixins_v1.yaml  service.proto
tests/Integration/goldens/asset/samples/V1/AssetServiceClient/: analyze_iam_policy.php  analyze_iam_policy_longrunning.php  analyze_move.php  analyze_org_policies.php  analyze_org_policy_governed_assets.php  analyze_org_policy_governed_containers.php  batch_get_assets_history.php  batch_get_effective_iam_policies.php  create_feed.php  create_saved_query.php  delete_feed.php  delete_saved_query.php  export_assets.php  get_feed.php  get_saved_query.php  list_assets.php  list_feeds.php  list_saved_queries.php  query_assets.php  search_all_iam_policies.php  search_all_resources.php  update_feed.php  update_saved_query.php
tests/Integration/goldens/asset/src/V1/: AssetServiceClient.php  gapic_metadata.json
tests/Integration/goldens/asset/src/V1/Client/: AssetServiceClient.php
tests/Integration/goldens/asset/src/V1/Gapic/: AssetServiceGapicClient.php
tests/Integration/goldens/asset/src/V1/resources/: asset_service_descriptor_config.php  asset_service_rest_client_config.php
tests/Integration/goldens/asset/tests/Unit/V1/: AssetServiceClientTest.php
tests/Integration/goldens/asset_rest/src/V1/Gapic/: AssetServiceGapicClient.php
tests/Integration/goldens/asset_rest/tests/Unit/V1/: AssetServiceClientTest.php
tests/Integration/goldens/compute_small/samples/V1/AddressesClient/: aggregated_list.php  delete.php  insert.php  list.php
tests/Integration/goldens/compute_small/samples/V1/RegionOperationsClient/: get.php
tests/Integration/goldens/compute_small/samples/V1/SubnetworksClient/: list_usable.php
tests/Integration/goldens/compute_small/src/V1/: AddressesClient.php  RegionOperationsClient.php  SubnetworksClient.php  gapic_metadata.json
tests/Integration/goldens/compute_small/src/V1/Client/: AddressesClient.php  RegionOperationsClient.php
tests/Integration/goldens/compute_small/src/V1/Gapic/: AddressesGapicClient.php  RegionOperationsGapicClient.php  SubnetworksGapicClient.php
tests/Integration/goldens/compute_small/src/V1/resources/: addresses_client_config.json  addresses_descriptor_config.php  addresses_rest_client_config.php  region_operations_client_config.json  region_operations_descriptor_config.php  region_operations_rest_client_config.php  subnetworks_client_config.json  subnetworks_descriptor_config.php  subnetworks_rest_client_config.php
tests/Integration/goldens/compute_small/tests/Unit/V1/: AddressesClientTest.php  RegionOperationsClientTest.php  SubnetworksClientTest.php
tests/Integration/goldens/container/samples/V1/ClusterManagerClient/: set_labels.php  (+35 more)
tests/Integration/goldens/container/src/V1/: ClusterManagerClient.php
tests/Integration/goldens/dataproc/src/V1/: AutoscalingPolicyServiceClient.php  BatchControllerClient.php  ClusterControllerClient.php  JobControllerClient.php  NodeGroupControllerClient.php  SessionControllerClient.php  SessionTemplateControllerClient.php  WorkflowTemplateServiceClient.php  gapic_metadata.json
tests/Integration/goldens/functions/src/V1/: CloudFunctionsServiceClient.php
tests/Integration/goldens/functions_preview/src/V1/: CloudFunctionsServiceClient.php
tests/Integration/goldens/iam/src/V1/: IAMPolicyClient.php  gapic_metadata.json
tests/Integration/goldens/kms/src/V1/: KeyManagementServiceClient.php  gapic_metadata.json
tests/Integration/goldens/logging/src/V2/: ConfigServiceV2Client.php  LoggingServiceV2Client.php  MetricsServiceV2Client.php
tests/Integration/goldens/redis/src/: gapic_metadata.json
tests/Integration/goldens/redis/src/V1/: CloudRedisClient.php  gapic_metadata.json
tests/Integration/goldens/retail/src/V2alpha/: AnalyticsServiceClient.php  BranchServiceClient.php  CatalogServiceClient.php  CompletionServiceClient.php  ControlServiceClient.php  ConversationalSearchServiceClient.php  GenerativeQuestionServiceClient.php  MerchantCenterAccountLinkServiceClient.php  ModelServiceClient.php  PredictionServiceClient.php  ProductServiceClient.php  ProjectServiceClient.php  SearchServiceClient.php  ServingConfigServiceClient.php  UserEventServiceClient.php  gapic_metadata.json
tests/Integration/goldens/securitycenter/src/V1/: SecurityCenterClient.php
tests/Integration/goldens/spanner/: BUILD.bazel
tests/Integration/goldens/spanner/src/V1/: DatabaseAdminClient.php
tests/Integration/goldens/speech/src/V1/: AdaptationClient.php  SpeechClient.php  gapic_metadata.json
tests/Integration/goldens/talent/src/V4/: CompanyServiceClient.php  CompletionClient.php  EventServiceClient.php  JobServiceClient.php  TenantServiceClient.php
tests/Integration/goldens/talent/src/V4beta1/: ApplicationServiceClient.php  CompanyServiceClient.php  CompletionClient.php  EventServiceClient.php  JobServiceClient.php  ProfileServiceClient.php  TenantServiceClient.php
tests/Integration/goldens/videointelligence/: BUILD.bazel
tests/Integration/goldens/videointelligence/src/V1/: VideoIntelligenceServiceClient.php  gapic_metadata.json
(+1296 files in other folders)
