# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gapic_generator_php//rules_php_gapic:php_gapic.bzl", "php_proto_library", "php_grpc_library", "php_gapic_library")
load("@gapic_generator_php//rules_php_gapic:php_gapic_pkg.bzl", "php_gapic_assembly_pkg")

proto_library(
    name = "example_proto",
    srcs = [
        "example.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:resource_proto",
    ],
)

php_proto_library(
    name = "example_php_proto",
    deps = [
        ":example_proto",
    ],
)

php_grpc_library(
    name = "example_php_grpc",
    srcs = [
        ":example_proto",
    ],
    deps = [
        ":example_php_proto",
    ]
)

php_gapic_library(
    name = "example_php_gapic",
    src = [
        ":example_proto",
    ],
    deps = [
        ":example_php_proto",
        ":example_php_grpc",
    ],
    gapic_yaml = None,
    service_yaml = None,
)

php_gapic_assembly_pkg(
    name = "example_php_pkg",
    deps = [
        ":example_php_proto",
        ":example_php_grpc",
        ":example_php_gapic",
    ]
)
