# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_google_protobuf",
    sha256 = "9f47ba30e0db51bf58d4fdfbdedebefa8bf9b27be5a676db9336ebf623c89f9a",
    strip_prefix = "protobuf-23.4",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/v23.4.zip"],
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

http_archive(
    name = "com_github_grpc_grpc",
    sha256 = "4b64cbc454cc4fd0801a2823111e1d99f519c765dfa116905740f7ca2256d085",
    strip_prefix = "grpc-1.51.1",
    urls = ["https://github.com/grpc/grpc/archive/v1.51.1.zip"],
)

load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")

grpc_deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

grpc_extra_deps()

http_archive(
    name = "rules_proto",
    sha256 = "56314b567d59daf64cb0379dd86dbb9de170b18d47fe378d5451e08f407c36bf",
    strip_prefix = "rules_proto-70b42485395e0fa376f32b9e7f4012a70d6121d2",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_proto/archive/70b42485395e0fa376f32b9e7f4012a70d6121d2.tar.gz",
        "https://github.com/bazelbuild/rules_proto/archive/70b42485395e0fa376f32b9e7f4012a70d6121d2.tar.gz",
    ],
)

_rules_gapic_version = "0.5.4"

http_archive(
    name = "rules_gapic",
    strip_prefix = "rules_gapic-%s" % _rules_gapic_version,
    urls = ["https://github.com/googleapis/rules_gapic/archive/v%s.tar.gz" % _rules_gapic_version],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

# Latest version as of 2021-06-22
http_archive(
    name = "com_google_googleapis",
    strip_prefix = "googleapis-b44c45ca32db478554a3b8e2e04d317ed2f466f4",
    urls = ["https://github.com/googleapis/googleapis/archive/b44c45ca32db478554a3b8e2e04d317ed2f466f4.zip"],
)

load("@com_google_googleapis//:repository_rules.bzl", "switched_rules_by_language")

switched_rules_by_language(
    name = "com_google_googleapis_imports",
    gapic = True,
    grpc = True,
    php = True,
)

# Use the following to use the bazel rules defined in github.
http_archive(
    name = "gapic_generator_php",
    strip_prefix = "gapic-generator-php-1.0.2",
    urls = ["https://github.com/googleapis/gapic-generator-php/archive/v1.0.2.zip"],
)
# Use the following to use the bazel rules defined locally, rather than fetched from github.
#local_repository(
#    name = "gapic_generator_php",
#    path = "../",
#)

load("@gapic_generator_php//:repositories.bzl", "gapic_generator_php_repositories")

gapic_generator_php_repositories()
