load(
    "@com_google_googleapis_imports//:imports.bzl",
    php_gapic_assembly_pkg = "php_gapic_assembly_pkg2",
    php_gapic_library = "php_gapic_library2",
    php_grpc_library = "php_grpc_library2",
    php_proto_library = "php_proto_library2",
)
load("//:rules_php_test/integration_test.bzl", "php_golden_update", "php_integration_test")

####################################################
# Integration Test Rules
####################################################
INTEGRATION_TEST_LIBRARIES = ["asset"]

[php_integration_test(
    name = lib_name,
    data = ["//integration_tests/goldens/%s:goldens_files" % lib_name],
    target = "%s_php_gapic" % lib_name,
) for lib_name in INTEGRATION_TEST_LIBRARIES]

[php_golden_update(
    name = "%s_update" % lib_name,
    data = ["//integration_tests/goldens/%s:goldens_files" % lib_name],
    target = "%s_php_gapic" % lib_name,
) for lib_name in INTEGRATION_TEST_LIBRARIES]

####################################################
# API Library Rules
####################################################
# proto_library, grpc_library, and gapic_library rule redefinitions will eventually go away
# once more APIs in googleapis have been migrated to the microgenerator.

# Asset API - basic case.
php_proto_library(
    name = "asset_php_proto",
    deps = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto"],
)

php_grpc_library(
    name = "asset_php_grpc",
    srcs = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto"],
    deps = [":asset_php_proto"],
)

php_gapic_library(
    name = "asset_php_gapic",
    src = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto_with_info"],
    gapic_yaml = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_gapic.yaml",
    grpc_service_config = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_grpc_service_config.json",
    service_yaml = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_v1.yaml",
    deps = [
        ":asset_php_grpc",
        ":asset_php_proto",
    ],
)

# Open Source Packages
php_gapic_assembly_pkg(
    name = "google-cloud-asset-v1-php",
    deps = [
        ":asset_php_gapic",
        ":asset_php_grpc",
        ":asset_php_proto",
    ],
)
