# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":php.bzl", "php_binary")

php_binary(
    name = "php_gapic_generator_binary",
    entry_point = "src/Main.php",
    php_composer_install = "@php_gapic_generator_composer_install//:install",
    visibility = ["//visibility:public"],
    working_directory_flag_name = "side_loaded_root_dir",
)
