load(
    "@com_google_googleapis_imports//:imports.bzl",
    php_gapic_assembly_pkg = "php_gapic_assembly_pkg2",
    php_gapic_library = "php_gapic_library2",
    php_grpc_library = "php_grpc_library2",
    php_proto_library = "php_proto_library2",
)
load("//:rules_php_test/integration_test.bzl", "php_golden_update", "php_integration_test")

####################################################
# Integration Test Rules
####################################################
INTEGRATION_TEST_LIBRARIES = [
    "asset",  # Basic case.
    "speech",  # sample_code field in gapic.yaml.
    "redis",  # sample_code field in gapic.yaml.
    "videointelligence",  # sample_code field in gapic.yaml.
]

[php_integration_test(
    name = lib_name,
    data = ["//tests/Integration/goldens/%s:goldens_files" % lib_name],
    target = "%s_php_gapic" % lib_name,
) for lib_name in INTEGRATION_TEST_LIBRARIES]

[php_golden_update(
    name = "%s_update" % lib_name,
    data = ["//tests/Integration/goldens/%s:goldens_files" % lib_name],
    target = "%s_php_gapic" % lib_name,
) for lib_name in INTEGRATION_TEST_LIBRARIES]

####################################################
# API Library Rules
####################################################
# proto_library, grpc_library, and gapic_library rule redefinitions will eventually go away
# once more APIs in googleapis have been migrated to the microgenerator.

# Asset API - basic case.
php_proto_library(
    name = "asset_php_proto",
    deps = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto"],
)

php_grpc_library(
    name = "asset_php_grpc",
    srcs = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto"],
    deps = [":asset_php_proto"],
)

php_gapic_library(
    name = "asset_php_gapic",
    srcs = ["@com_google_googleapis//google/cloud/asset/v1:asset_proto_with_info"],
    gapic_yaml = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_gapic.yaml",
    grpc_service_config = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_grpc_service_config.json",
    service_yaml = "@com_google_googleapis//google/cloud/asset/v1:cloudasset_v1.yaml",
    deps = [
        ":asset_php_grpc",
        ":asset_php_proto",
    ],
)

php_gapic_assembly_pkg(
    name = "google-cloud-asset-v1-php",
    deps = [
        ":asset_php_gapic",
        ":asset_php_grpc",
        ":asset_php_proto",
    ],
)

# Speech - sample_code.
php_proto_library(
    name = "speech_php_proto",
    deps = ["@com_google_googleapis//google/cloud/speech/v1:speech_proto"],
)

php_grpc_library(
    name = "speech_php_grpc",
    srcs = ["@com_google_googleapis//google/cloud/speech/v1:speech_proto"],
    deps = [":speech_php_proto"],
)

php_gapic_library(
    name = "speech_php_gapic",
    srcs = ["@com_google_googleapis//google/cloud/speech/v1:speech_proto_with_info"],
    gapic_yaml = "@com_google_googleapis//google/cloud/speech/v1:speech_gapic.yaml",
    grpc_service_config = "@com_google_googleapis//google/cloud/speech/v1:speech_grpc_service_config.json",
    service_yaml = "@com_google_googleapis//google/cloud/speech/v1:speech_v1.yaml",
    deps = [
        ":speech_php_grpc",
        ":speech_php_proto",
    ],
)

php_gapic_assembly_pkg(
    name = "google-cloud-speech-v1-php",
    deps = [
        ":speech_php_gapic",
        ":speech_php_grpc",
        ":speech_php_proto",
    ],
)

# Redis - sample code.
php_proto_library(
    name = "redis_php_proto",
    deps = ["@com_google_googleapis//google/cloud/redis/v1:redis_proto"],
)

php_grpc_library(
    name = "redis_php_grpc",
    srcs = ["@com_google_googleapis//google/cloud/redis/v1:redis_proto"],
    deps = [":redis_php_proto"],
)

php_gapic_library(
    name = "redis_php_gapic",
    srcs = ["@com_google_googleapis//google/cloud/redis/v1:redis_proto_with_info"],
    gapic_yaml = "@com_google_googleapis//google/cloud/redis/v1:redis_gapic.yaml",
    grpc_service_config = "@com_google_googleapis//google/cloud/redis/v1:redis_grpc_service_config.json",
    service_yaml = "@com_google_googleapis//google/cloud/redis/v1:redis_v1.yaml",
    deps = [
        ":redis_php_grpc",
        ":redis_php_proto",
    ],
)

php_gapic_assembly_pkg(
    name = "google-cloud-redis-v1-php",
    deps = [
        ":redis_php_gapic",
        ":redis_php_grpc",
        ":redis_php_proto",
    ],
)

# Video intelligence - sample code.
php_proto_library(
    name = "videointelligence_php_proto",
    deps = ["@com_google_googleapis//google/cloud/videointelligence/v1:videointelligence_proto"],
)

php_grpc_library(
    name = "videointelligence_php_grpc",
    srcs = ["@com_google_googleapis//google/cloud/videointelligence/v1:videointelligence_proto"],
    deps = [":videointelligence_php_proto"],
)

php_gapic_library(
    name = "videointelligence_php_gapic",
    srcs = ["@com_google_googleapis//google/cloud/videointelligence/v1:videointelligence_proto_with_info"],
    # Do not change this to the videointelligence_gapic.yaml, see tracking bug.
    gapic_yaml = "@com_google_googleapis//google/cloud/videointelligence/v1:videointelligence_gapic.legacy.yaml",
    service_yaml = "@com_google_googleapis//google/cloud/videointelligence/v1:videointelligence_v1.yaml",
    deps = [
        ":videointelligence_php_grpc",
        ":videointelligence_php_proto",
    ],
)

php_gapic_assembly_pkg(
    name = "google-cloud-videointelligence-v1-php",
    deps = [
        ":videointelligence_php_gapic",
        ":videointelligence_php_grpc",
        ":videointelligence_php_proto",
    ],
)
